--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -1,8 +1,8 @@
 ---
-slug: reducing-emergency-room-wait-times-systems-engineering-ai
-title: "Reducing Emergency Room Wait Times with Systems Engineering and AI"
+slug: reducing-emergency-room-wait-times-data-driven-process-optimization
+title: "Reducing Emergency Room Wait Times Through Data-Driven Process Optimization"
 authors: [francis]
-tags: [systems-engineering, healthcare, ai, operations-research, simulation, knime, machine-learning]
+tags: [process-optimization, healthcare, data-analytics, operations-research, simulation, knime, machine-learning]
 date: 2025-08-04
 ---
 
