--- a/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
+++ b/blog/2025-08-04-Reducung Emergency Room Wait Time With Systems Engineering And AI.mdx
@@ -24,7 +24,7 @@ import Newsletter from "@site/src/components/Newsletter";
     marginBottom: '1rem',
     lineHeight: 1.2
   }}>
-    Reducing Emergency Room Wait Times with Systems Engineering and AI
+    Reducing Emergency Room Wait Times Through Data-Driven Process Optimization
   </h1>
   
   <p style={{
